@@ -5,9 +5,12 @@ This file is referred by the automatic release script.
 [Release History (Japanese)]
 
 <!-- BEGIN-LATEST-JP -->
+# x-engine 1.1.3 2024/6/10
+* iOSエクスポートの実行時エラーを修正
+<!-- END-LATEST-JP -->
+
 # x-engine 1.1.2 2024/6/10
 * iOSエクスポートのビルドエラーを修正
-<!-- END-LATEST-JP -->
 
 # x-engine 1.1.1 2024/6/10
 * switch/newsコマンドの削除が不完全な点を修正
